crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__inline_styles__inline_styles-15.snap
---
source: crates/oxvg_optimiser/src/jobs/inline_styles.rs
expression: "test_config(r#\"{ \"inlineStyles\": {} }\"#,\nSome(r#\"<svg viewBox=\"0 0 24 24\" version=\"1.1\" xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- ignores deprecated shadow-dom selectors -->\n    <defs>\n        <style type=\"text/css\">\n            html /deep/ [layout][horizontal], html /deep/ [layout][vertical] { display: flex; }\n            html /deep/ [layout][horizontal][inline], html /deep/ [layout][vertical][inline] { display: inline-flex; }\n            html /deep/ [layout][horizontal] { flex-direction: row; }\n            html /deep/ [layout][horizontal][reverse] { flex-direction: row-reverse; }\n            html /deep/ [layout][vertical] { flex-direction: column; }\n            html /deep/ [layout][vertical][reverse] { flex-direction: column-reverse; }\n            html /deep/ [layout][wrap] { flex-wrap: wrap; }\n            html /deep/ [layout][wrap-reverse] { flex-wrap: wrap-reverse; }\n            html /deep/ [flex] { flex: 1 1 0px; }\n            html /deep/ [flex][auto] { flex: 1 1 auto; }\n            html /deep/ [flex][none] { flex: 0 0 auto; }\n            html /deep/ [flex][one] { flex: 1 1 0px; }\n            html /deep/ [flex][two] { flex: 2 1 0px; }\n            html /deep/ [flex][three] { flex: 3 1 0px; }\n            html /deep/ [flex][four] { flex: 4 1 0px; }\n            html /deep/ [flex][five] { flex: 5 1 0px; }\n            html /deep/ [flex][six] { flex: 6 1 0px; }\n            html /deep/ [flex][seven] { flex: 7 1 0px; }\n            html /deep/ [flex][eight] { flex: 8 1 0px; }\n            html /deep/ [flex][nine] { flex: 9 1 0px; }\n            html /deep/ [flex][ten] { flex: 10 1 0px; }\n            html /deep/ [flex][eleven] { flex: 11 1 0px; }\n            html /deep/ [flex][twelve] { flex: 12 1 0px; }\n            html /deep/ [layout][start] { align-items: flex-start; }\n            html /deep/ [layout][center] { align-items: center; }\n            html /deep/ [layout][end] { align-items: flex-end; }\n            html /deep/ [layout][start-justified] { justify-content: flex-start; }\n            html /deep/ [layout][center-justified] { justify-content: center; }\n            html /deep/ [layout][end-justified] { justify-content: flex-end; }\n            html /deep/ [layout][around-justified] { justify-content: space-around; }\n            html /deep/ [layout][justified] { justify-content: space-between; }\n            html /deep/ [self-start] { align-self: flex-start; }\n            html /deep/ [self-center] { align-self: center; }\n            html /deep/ [self-end] { align-self: flex-end; }\n            html /deep/ [self-stretch] { align-self: stretch; }\n            html /deep/ [block] { display: block; }\n            html /deep/ [hidden] { display: none !important; }\n            html /deep/ [relative] { position: relative; }\n            html /deep/ [fit] { position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; }\n            body[fullbleed] { margin: 0px; height: 100vh; }\n            html /deep/ [segment], html /deep/ segment { display: block; position: relative; box-sizing: border-box; margin: 1em 0.5em; padding: 1em; -webkit-box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 0px 1px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 0px 1px; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; background-color: white; }\n            html /deep/ core-icon { display: inline-block; vertical-align: middle; background-repeat: no-repeat; }\n            html /deep/ core-icon[size=\"\"] { position: relative; }\n        </style>\n    </defs>\n    <g id=\"airplanemode-on\">\n        <path d=\"M10.2,9\"/>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" version="1.1">
    <!-- ignores deprecated shadow-dom selectors -->
    <defs>
        <style type="text/css">
            html /deep/ [layout][horizontal],html /deep/ [layout][vertical]{display:flex}html /deep/ [layout][horizontal][inline],html /deep/ [layout][vertical][inline]{display:inline-flex}html /deep/ [layout][horizontal]{flex-direction:row}html /deep/ [layout][horizontal][reverse]{flex-direction:row-reverse}html /deep/ [layout][vertical]{flex-direction:column}html /deep/ [layout][vertical][reverse]{flex-direction:column-reverse}html /deep/ [layout][wrap]{flex-wrap:wrap}html /deep/ [layout][wrap-reverse]{flex-wrap:wrap-reverse}html /deep/ [flex]{flex:1 1 0}html /deep/ [flex][auto]{flex:auto}html /deep/ [flex][none]{flex:none}html /deep/ [flex][one]{flex:1 1 0}html /deep/ [flex][two]{flex:2 1 0}html /deep/ [flex][three]{flex:3 1 0}html /deep/ [flex][four]{flex:4 1 0}html /deep/ [flex][five]{flex:5 1 0}html /deep/ [flex][six]{flex:6 1 0}html /deep/ [flex][seven]{flex:7 1 0}html /deep/ [flex][eight]{flex:8 1 0}html /deep/ [flex][nine]{flex:9 1 0}html /deep/ [flex][ten]{flex:10 1 0}html /deep/ [flex][eleven]{flex:11 1 0}html /deep/ [flex][twelve]{flex:12 1 0}html /deep/ [layout][start]{align-items:flex-start}html /deep/ [layout][center]{align-items:center}html /deep/ [layout][end]{align-items:flex-end}html /deep/ [layout][start-justified]{justify-content:flex-start}html /deep/ [layout][center-justified]{justify-content:center}html /deep/ [layout][end-justified]{justify-content:flex-end}html /deep/ [layout][around-justified]{justify-content:space-around}html /deep/ [layout][justified]{justify-content:space-between}html /deep/ [self-start]{align-self:flex-start}html /deep/ [self-center]{align-self:center}html /deep/ [self-end]{align-self:flex-end}html /deep/ [self-stretch]{align-self:stretch}html /deep/ [block]{display:block}html /deep/ [hidden]{display:none!important}html /deep/ [relative]{position:relative}html /deep/ [fit]{position:absolute;inset:0}body[fullbleed]{height:100vh;margin:0}html /deep/ [segment],html /deep/ segment{box-sizing:border-box;background-color:#fff;border-radius:5px;margin:1em .5em;padding:1em;display:block;position:relative;-webkit-box-shadow:0 0 0 1px #00000019;box-shadow:0 0 0 1px #00000019}html /deep/ core-icon{vertical-align:middle;background-repeat:no-repeat;display:inline-block}html /deep/ core-icon[size=""]{position:relative}
        </style>
    </defs>
    <g id="airplanemode-on">
        <path d="M10.2 9"/>
    </g>
</svg>
