crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__inline_styles__inline_styles-16.snap
---
source: crates/oxvg_optimiser/src/jobs/inline_styles.rs
expression: "test_config(r#\"{ \"inlineStyles\": { \"onlyMatchedOnce\": false } }\"#,\nSome(r#\"<svg id=\"Ebene_1\" data-name=\"Ebene 1\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 222 57.28\">\n    <!-- ids and classes handled correctly -->\n    <defs>\n        <style>\n            #id0 {\n                stroke: red;\n            }\n\n            .cls-1 {\n                fill: #37d0cd;\n            }\n\n            .cls-2{\n                fill: #fff;\n            }\n        </style>\n    </defs>\n    <title>button</title>\n    <rect id=\"id0\" class=\"cls-1\" width=\"222\" height=\"57.28\" rx=\"28.64\" ry=\"28.64\"/>\n    <path class=\"cls-2\" d=\"M312.75,168.66A2.15,2.15,0,0,1,311.2,165L316,160l-4.8-5a2.15,2.15,0,1,1,3.1-3l6.21,6.49a2.15,2.15,0,0,1,0,3L314.31,168a2.14,2.14,0,0,1-1.56.67Zm0,0\" transform=\"translate(-119 -131.36)\"/>\n    <circle class=\"cls-2\" cx=\"33.5\" cy=\"27.25\" r=\"2.94\"/>\n    <circle class=\"cls-2\" cx=\"162.5\" cy=\"158.61\" r=\"2.94\" transform=\"translate(-181.03 61.15) rotate(-52.89)\"/>\n    <circle class=\"cls-2\" cx=\"172.5\" cy=\"158.61\" r=\"2.94\" transform=\"translate(-157.03 -75.67) rotate(-16.55)\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="Ebene_1" data-name="Ebene 1" viewBox="0 0 222 57.28">
    <!-- ids and classes handled correctly -->
    <defs>
        
    </defs>
    <title>button</title>
    <rect width="222" height="57.28" rx="28.64" ry="28.64" style="fill:#37d0cd;stroke:red"></rect>
    <path d="M312.75,168.66A2.15,2.15,0,0,1,311.2,165L316,160l-4.8-5a2.15,2.15,0,1,1,3.1-3l6.21,6.49a2.15,2.15,0,0,1,0,3L314.31,168a2.14,2.14,0,0,1-1.56.67Zm0,0" transform="translate(-119 -131.36)" style="fill:#fff"></path>
    <circle cx="33.5" cy="27.25" r="2.94" style="fill:#fff"></circle>
    <circle cx="162.5" cy="158.61" r="2.94" transform="translate(-181.03 61.15) rotate(-52.89)" style="fill:#fff"></circle>
    <circle cx="172.5" cy="158.61" r="2.94" transform="translate(-157.03 -75.67) rotate(-16.55)" style="fill:#fff"></circle>
</svg>
